--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@types/node": "^12.20.10",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "@types/react-responsive": "^8.0.2",
     "bootstrap": "^4.6.0",
     "dotenv": "^8.2.0",
     "install": "^0.13.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.2.4",
