--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^4.6.0",
     "dotenv": "^8.2.0",
     "install": "^0.13.0",
+    "nipplejs": "^0.9.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
