--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-responsive": "^8.0.2",
     "bootstrap": "^4.6.0",
     "dotenv": "^8.2.0",
+    "firebase": "^8.4.3",
     "install": "^0.13.0",
     "nipplejs": "^0.9.0",
     "react": "^17.0.2",
@@ -23,6 +24,7 @@
     "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^7.0.4",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.1"
   },
